--- a/.env.production
+++ b/.env.production
@@ -15,12 +15,12 @@ VITE_BUILD_COMPRESS = 'none'
 # Whether to delete origin files when using compress, default false
 VITE_BUILD_COMPRESS_DELETE_ORIGIN_FILE = false
 
-# Basic interface address SPA
-VITE_GLOB_API_URL=/basic-api
+# Basic interface address SPA /basic-
+VITE_GLOB_API_URL=/api
 
 # File upload address， optional
 # It can be forwarded by nginx or write the actual address directly
-VITE_GLOB_UPLOAD_URL=/upload
+VITE_GLOB_UPLOAD_URL=/api/file/upload
 
 # Interface prefix
 VITE_GLOB_API_URL_PREFIX=
