--- a/.env
+++ b/.env
@@ -6,3 +6,5 @@ VITE_GLOB_APP_TITLE = '人力资源系统'
 
 # spa shortname
 VITE_GLOB_APP_SHORT_NAME = HRSys
+
+VITE_PUBLIC_DEVPATH = 'https://test.hr.hzshengmai.com'
